examples/test/testpolicy7498.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7498
  namespace: namespace184
spec:
  podSelector:
    matchLabels:
      key44: value19
      key32: value25
      key25: value32
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key37: value2
      podSelector:
        matchLabels:
          key11: value6
          key27: value47
          key16: value49
